--- a/index.html
+++ b/index.html
@@ -47,4 +47,4 @@
 
 </body>
 </html>
-<img src="cinqueterre.jpg" class="thumbnail" alt="Cinque Terre">
+<img src="E7YzuN.jpg" class="thumbnail" alt="Cinque Terre">
