--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <body>
 
 <div class="container mt-3">
-  <h2>Rounded Corners</h2>
-  <p>The .rounded class adds rounded corners to an image:</p>            
+  <h2>Sky</h2>
+  <p>Wowwwwwwwwwww:</p>            
   <img src="E7YzuN.jpg" class="rounded" alt="Cinque Terre" width="304" height="236"> 
 </div>
 
